--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,7 @@ dmypy.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 storage.pickle
+
+leto/loaders/data
+.vscode/launch.json
+.vscode/settings.json
