--- a/.gitignore
+++ b/.gitignore
@@ -153,10 +153,10 @@ leto/loaders/data
 
 ### vscode ###
 .vscode/*
-# !.vscode/settings.json
-# !.vscode/tasks.json
-# !.vscode/launch.json
-# !.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode
