--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,8 +14,16 @@ services:
     command: ["streamlit", "run", "leto.py"]
 
   neo4j:
-    image: neo4j
+    neo4j:
+    image: neo4j:latest
     container_name: neo4j
+    ports:
+      - 7473:7473
+      - 7474:7474
+      - 7687:7687
+    environment:
+      - NEO4J_AUTH=neo4j/12345678
+      
 
   mongo:
     image: mongo
