--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,12 +14,12 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      
+
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -30,8 +30,8 @@ jobs:
         with:
           push: true
           tags: letoai/leto:latest
-          context: "."
+          context: "docker"
           file: "docker/dockerfile"
-      
+
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
