--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - 7473:7473
       - 7474:7474
       - 7687:7687
+    volumes:
+      - "../data/neo4j:/var/lib/neo4j/data"
     environment:
       - NEO4J_AUTH=neo4j/12345678
 
