--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,5 +1,6 @@
 altair==4.0.1
 black==21.6b0
+click==7.1.2
 graphviz==0.13.2
 networkx==2.4
 numpy==1.18.2
@@ -16,3 +17,4 @@ neo4j==4.2.1
 plotly==5.0.0
 matplotlib==3.3.4
 pytest==6.2.4
+wikipedia==1.4.0
