--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -20,3 +20,7 @@ pytest==6.2.4
 wikipedia==1.4.0
 pytest-coverage==0.0
 coreferee==1.0.1
+nltk==3.6.2
+torch==1.6.0
+transformers==3.4.0
+scipy==1.4.1
