--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -26,7 +26,8 @@ RUN python3 -m coreferee install en
 
 #setup OpenNRE
 RUN git clone https://github.com/thunlp/OpenNRE.git \
-    && pip install -r OpenNRE/requirements.txt \
-    && python OpenNRE/setup.py install
+    && cd OpenNRE \
+    && pip install -r requirements.txt \
+    && python setup.py install
 
 USER $USERNAME
