--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -25,10 +25,9 @@ RUN pip install -r /home/$USERNAME/requirements.txt
 RUN python3 -m coreferee install en
 
 #setup OpenNRE
-RUN cd ~/leto \
-    && git clone https://github.com/thunlp/OpenNRE.git \
+RUN git clone https://github.com/thunlp/OpenNRE.git \
     && cd OpenNRE \
     && pip install -r requirements.txt \
-    && python setup.py install
+    && python3 setup.py install
 
 USER $USERNAME
