--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -25,9 +25,6 @@ RUN pip install -r /home/$USERNAME/requirements.txt
 RUN python3 -m coreferee install en
 
 #setup OpenNRE
-RUN git clone https://github.com/thunlp/OpenNRE.git \
-    && cd OpenNRE \
-    && pip install -r requirements.txt \
-    && python3 setup.py install
+RUN pip install git+https://github.com/thunlp/OpenNRE.git#egg=OpenNRE
 
 USER $USERNAME
