--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -20,6 +20,7 @@ pytest==6.2.4
 wikipedia==1.4.0
 pytest-coverage==0.0
 coreferee==1.0.1
+tensorflow==2.4.2
 nltk==3.6.2
 torch==1.6.0
 transformers==3.4.0
