--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,22 +1,128 @@
 altair==4.0.1
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+base58==2.1.0
+beautifulsoup4==4.9.3
 black==21.6b0
+bleach==3.3.0
+blinker==1.4
+blis==0.7.4
+cachetools==4.2.2
+catalogue==2.0.4
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
-numpy==1.19.5
-graphviz==0.13.2
-networkx==2.4
-pandas==1.0.3
-pydot==1.4.1
-PyYAML==5.3.1
-scikit_learn==0.23.1
-scipy==1.4.1
-streamlit==0.74.1
+coverage==5.5
+cymem==2.0.5
+cytoolz==0.11.0
+decorator==5.0.9
+defusedxml==0.7.1
+docopt==0.6.2
+entrypoints==0.3
 fuzzywuzzy==0.18.0
-spacy==3.0.5
-textacy==0.11.0
+gitdb==4.0.7
+GitPython==3.1.18
+graphviz==0.13.2
+idna==2.10
+iniconfig==1.1.1
+ipykernel==5.5.5
+ipython==7.25.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+jellyfish==0.8.2
+Jinja2==3.0.1
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
+mistune==0.8.4
+murmurhash==1.0.5
+mypy-extensions==0.4.3
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
 neo4j==4.2.1
+nest-asyncio==1.5.1
+networkx==2.4
+notebook==6.4.0
+numpy==1.18.2
+packaging==20.9
+pandas==1.0.3
+pandocfilters==1.4.3
+parso==0.8.2
+pathspec==0.8.1
+pathy==0.5.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+pipreqs==0.4.10
 plotly==5.0.0
-matplotlib==3.3.4
+pluggy==0.13.1
+preshed==3.0.5
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+ptyprocess==0.7.0
+py==1.10.0
+pyarrow==4.0.1
+pycparser==2.20
+pydantic==1.7.4
+pydeck==0.6.2
+pydot==1.4.1
+Pygments==2.9.0
+pyparsing==2.4.7
+pyphen==0.11.0
+pyrsistent==0.17.3
 pytest==6.2.4
-wikipedia==1.4.0
+pytest-cov==2.12.1
+pytest-cover==3.0.0
 pytest-coverage==0.0
-coreferee==1.0.1
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.3.1
+pyzmq==22.1.0
+regex==2021.4.4
+requests==2.25.1
+scikit-learn==0.23.1
+scipy==1.4.1
+Send2Trash==1.7.1
+six==1.16.0
+smart-open==3.0.0
+smmap==4.0.0
+soupsieve==2.2.1
+spacy==3.0.5
+spacy-legacy==3.0.6
+srsly==2.4.1
+streamlit==0.87.0
+tenacity==7.0.0
+terminado==0.10.1
+testpath==0.5.0
+textacy==0.11.0
+thinc==8.0.6
+threadpoolctl==2.1.0
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+tqdm==4.61.1
+traitlets==5.0.5
+typer==0.3.2
+tzlocal==2.1
+urllib3==1.26.6
+validators==0.18.2
+wasabi==0.8.2
+watchdog==2.1.3
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wikipedia==1.4.0
+yarg==0.1.9
