--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -22,7 +22,7 @@ RUN mkdir -p /home/$USERNAME/.vscode-server/extensions \
         /home/$USERNAME/.vscode-server-insiders
 
 COPY requirements.txt /home/$USERNAME/requirements.txt
-RUN python3 -m pip --disable-pip-version-check install -r /home/$USERNAME/requirements.txt --index-url http://nexus.prod.uci.cu/repository/pypi-proxy/simple/ --trusted-host nexus.prod.uci.cu
+RUN python3 -m pip --disable-pip-version-check install -r /home/$USERNAME/requirements.txt
 RUN python3 -m pip install --upgrade tensorflow
 RUN python3 -m coreferee install en
 
