--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ../data/opennre/:/home/coder/.opennre
       - vscode-leto:/home/coder/.vscode-server
     working_dir: "/home/coder/leto"
-    command: ["./docker/wait-for-it.sh", "neo4j:7687", "--","streamlit", "run", "leto.py"]
+    command: ["./docker/wait-for-it.sh", "neo4j:7687", "-t", "60", "--","streamlit", "run", "leto.py"]
     depends_on:
       - neo4j
 
