--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -51,6 +51,7 @@ jedi==0.18.0
 jellyfish==0.8.2
 Jinja2==3.0.1
 joblib==1.0.1
+jsonpickle==2.1.0
 jsonschema==3.2.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
@@ -75,6 +76,7 @@ nltk==3.6.2
 notebook==6.4.0
 numpy==1.19.2
 oauthlib==3.1.1
+opennre @ git+https://github.com/thunlp/OpenNRE.git@ad6c5b41df6d4aaaa0e09bc45e81ec7cb6cb6b2c
 opt-einsum==3.3.0
 packaging==20.9
 pandas==1.0.3
@@ -112,6 +114,7 @@ pytest-cover==3.0.0
 pytest-coverage==0.0
 python-dateutil==2.8.1
 pytz==2021.1
+pyvis==0.1.9
 PyYAML==5.3.1
 pyzmq==22.1.0
 rdflib==6.1.1
