--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: "LETO MVP"
-site_url: https://apiad.net
-repo_url: https://github.com/LETO-ai/leto-mvp
+site_url: https://leto-ai.github.io
+repo_url: https://github.com/LETO-ai/leto-ai.github.io
 edit_uri: ""
 
-remote_branch: master
+remote_branch: main
 
 theme:
   name: material
@@ -32,20 +32,9 @@ theme:
         name: Switch to light mode
 
 extra:
-  analytics:
-    provider: google
-    property: UA-35980410-3
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/LETO-ai
-    # - icon: fontawesome/brands/twitter
-    #   link: https://twitter.com/AlejandroPiad
-    # - icon: fontawesome/brands/linkedin
-    #   link: https://linkedin.com/in/apiad
-    # - icon: fontawesome/brands/reddit
-    #   link: https://reddit.com/u/apiad
-    # - icon: fontawesome/brands/telegram
-    #   link: https://t.me/mostly_harmless_ai
 
 copyright: "&copy; 2021 - University of Alicante & University of Havana"
 
