--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -24,6 +24,8 @@ RUN mkdir -p /home/$USERNAME/.vscode-server/extensions \
 COPY requirements.txt /home/$USERNAME/requirements.txt
 RUN python3 -m pip --disable-pip-version-check install -r /home/$USERNAME/requirements.txt
 RUN python3 -m coreferee install en
+RUN python3 -m spacy download es_core_news_sm
+RUN python3 -m spacy download en_core_web_sm
 
 #setup OpenNRE
 RUN python3 -m pip install git+https://github.com/thunlp/OpenNRE.git#egg=OpenNRE
